--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Prototype3</string>
+    <string name="app_name">Take of you</string>
     <string name="notification_channel_description"/>
 </resources>
